--- a/src/components/accueil/titreSite.css
+++ b/src/components/accueil/titreSite.css
@@ -2,18 +2,26 @@
   font-family: Staatliches, cursive;
   color: #fb4264;
   font-size: 3vw;
+  text-shadow: 1px 1px 9px rgba(247, 72, 72, 0.9);
 }
 
 .lastname {
   font-family: Staatliches, cursive;
-  color: #1d50f8;
+  color: #406cfc;
   font-size: 3vw;
+  text-shadow: 1px 1px 9px rgba(63, 120, 241, 0.9);
 }
 
 .titre {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+img {
+  width: 50px;
+  height: auto;
+  padding-bottom: 20px;
 }
 
 @media screen and (max-width: 600px) {
@@ -34,5 +42,9 @@
     align-items: center;
     margin: auto;
     padding-left: 20px;
+  }
+
+  img {
+    display: none;
   }
 }
