--- a/src/components/navbar/navBar.css
+++ b/src/components/navbar/navBar.css
@@ -1,51 +1,94 @@
-nav {
-  height: 50px;
-  background: linear-gradient(45deg, rgb(140, 233, 240), blue);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.liste {
-  list-style-type: none;
-  background: linear-gradient(45deg, rgb(140, 233, 240), blue);
-  height: 100%;
-  width: 100%;
+.navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: relative;
-  margin: 0;
-  padding: 0;
+  height: 75px;
+  background: #2193b0; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #6dd5ed,
+    #2193b0
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #6dd5ed,
+    #2193b0
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.items {
-  margin-right: 10px;
+.nav-links {
+  list-style-type: none;
+  display: flex;
+  justify-content: flex-end;
+  width: 75%;
+}
+
+.accueil,
+.portfolio,
+.apropos {
+  text-decoration: none;
   color: white;
+  font-size: 20px;
+  padding: 10px 20px;
+  margin: 0 10px;
   cursor: pointer;
 }
-.button {
+
+.logo {
+  color: white;
+}
+
+.mobile-menu-icon {
   display: none;
 }
 
-@media screen and (max-width: 500px) {
-  .liste {
-    flex-direction: column;
-    height: 250px;
+@media screen and (max-width: 780px) {
+  .logo {
+    display: flex;
+    position: absolute;
+    top: 15px;
+    left: 35px;
   }
-  .items:nth-child(1) {
-    margin-top: 50px;
+
+  .nav-links {
+    display: none;
   }
-  .items {
-    height: 50px;
-    width: 50%;
-    line-height: 50px;
+
+  .nav-links-mobile {
+    position: absolute;
+    display: block;
+    list-style: none;
+    left: 0;
+    top: 75px;
+    transition: all 0.5s ease-out;
+    width: 100%;
+  }
+
+  .accueil,
+  .portfolio,
+  .apropos {
+    color: green;
     text-align: center;
-    border-top: solid 1px white;
+    padding: 32px;
+    width: 100%;
+    transition: all 0.5s ease;
   }
-  .button {
+
+  .mobile-menu-icon {
     display: block;
     position: absolute;
-    right: 10px;
-    top: 10px;
-    color: #f1f1f1;
-    cursor: pointer;
+    background: none;
+    color: wheat;
+    font-size: 30px;
+    border: none;
+    outline: none;
+    top: 15px;
+    right: 25px;
   }
 }
