--- a/src/components/accueil/accueilPage.css
+++ b/src/components/accueil/accueilPage.css
@@ -1,3 +1,32 @@
+.grid-intro {
+  color: wheat;
+  display: flex;
+  align-items: center;
+  padding: 150px;
+  flex-direction: column;
+  margin-left: 30px;
+  width: 100%;
+  position: relative;
+  line-height: 50px;
+}
+
+.name {
+  color: rgb(230, 137, 94);
+}
+
+.intro {
+  font-family: 'Abril Fatface', cursive;
+  color: wheat;
+  font-size: 60px;
+  position: relative;
+  padding-bottom: 100px;
+}
+
+.presentation,
+p {
+  text-align: center;
+}
+
 .mer {
   width: 50%;
   height: auto;
@@ -6,7 +35,7 @@
 
 .photo {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 1100px) {
