--- a/src/components/accueil/accueilPage.css
+++ b/src/components/accueil/accueilPage.css
@@ -25,6 +25,7 @@
 .presentation,
 p {
   text-align: center;
+  font-size: 2em;
 }
 
 .mer {
@@ -38,8 +39,49 @@ p {
   justify-content: space-between;
 }
 
+.react_node {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 40%;
+  height: 40px;
+  padding-top: 50px;
+}
+
+.fa-react,
+.fa-node {
+  font-size: 40px;
+  color: rgb(230, 137, 94);
+}
+
+.fa-react:hover,
+.fa-node:hover {
+  color: rgb(230, 137, 94);
+  transform: scale(1) translate(5px);
+  transition: 0.5s all ease-in-out;
+}
+
 @media screen and (max-width: 1100px) {
   .mer {
     display: none;
+  }
+
+  .photo {
+    display: flex;
+    justify-content: center;
+  }
+
+  .intro {
+    color: wheat;
+    font-size: 40px;
+    padding-bottom: 60px;
+  }
+
+  .grid-intro {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 50px 10px 0 10px;
   }
 }
