--- a/src/components/accueil/accueilPage.css
+++ b/src/components/accueil/accueilPage.css
@@ -61,6 +61,18 @@ p {
   transition: 0.5s all ease-in-out;
 }
 
+/****** Bouton entrer ******/
+
+.btn {
+  font-family: 'Abril Fatface', cursive;
+  text-decoration: none;
+  color: wheat;
+  font-size: 25px;
+  padding: 100px 20px;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1100px) {
   .mer {
     display: none;
