--- a/src/components/accueil/accueilPage.css
+++ b/src/components/accueil/accueilPage.css
@@ -73,6 +73,13 @@ p {
   cursor: pointer;
 }
 
+.btn:hover {
+  color: rgb(230, 137, 94);
+  transform: scale(1) translate(5px);
+  transition: 0.5s all ease-in-out;
+  text-decoration: underline 1px;
+}
+
 @media screen and (max-width: 1100px) {
   .mer {
     display: none;
@@ -97,5 +104,11 @@ p {
     width: 100%;
     margin: 0;
     padding: 130px 10px 0 10px;
+  }
+
+  .btn {
+    text-decoration: underline 1px;
+    color: wheat;
+    font-size: 22px;
   }
 }
