--- a/src/components/accueil/accueilPage.css
+++ b/src/components/accueil/accueilPage.css
@@ -1,11 +1,14 @@
 .grid-intro {
   color: wheat;
   display: flex;
+  justify-content: center;
   align-items: center;
-  padding: 150px;
+  padding: 150px 150px 0 150px;
   flex-direction: column;
   margin-left: 30px;
+  margin-top: 80px;
   width: 100%;
+  height: fit-content;
   position: relative;
   line-height: 50px;
 }
@@ -30,7 +33,7 @@ p {
 
 .mer {
   width: 50%;
-  height: auto;
+  height: max-content;
   position: relative;
 }
 
@@ -45,7 +48,7 @@ p {
   align-items: center;
   width: 40%;
   height: 40px;
-  padding-top: 50px;
+  margin-top: 30px;
 }
 
 .fa-react,
@@ -57,18 +60,27 @@ p {
 .fa-react:hover,
 .fa-node:hover {
   color: rgb(230, 137, 94);
-  transform: scale(1) translate(5px);
-  transition: 0.5s all ease-in-out;
+  transform: rotate(360deg);
+  transition: 0.5s ease;
 }
 
 /****** Bouton entrer ******/
+
+.entrer {
+  padding-top: 100px;
+}
+.entrer:hover {
+  color: rgb(230, 137, 94);
+  transform: scale(1) translate(5px);
+  text-decoration: underline 1px;
+  transition: 0.5s ease-in-out;
+}
 
 .btn {
   font-family: 'Abril Fatface', cursive;
   text-decoration: none;
   color: wheat;
   font-size: 25px;
-  padding: 100px 20px;
   margin: 0 10px;
   cursor: pointer;
 }
@@ -76,8 +88,18 @@ p {
 .btn:hover {
   color: rgb(230, 137, 94);
   transform: scale(1) translate(5px);
-  transition: 0.5s all ease-in-out;
   text-decoration: underline 1px;
+}
+
+/***** Reseaux *****/
+
+.reseaux {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  margin-top: 70px;
 }
 
 @media screen and (max-width: 1100px) {
