--- a/src/components/accueil/accueilPage.css
+++ b/src/components/accueil/accueilPage.css
@@ -1,5 +1,5 @@
 .grid-intro {
-  color: rgb(0, 102, 255);
+  color: rgb(247, 219, 63);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,12 +14,12 @@
 }
 
 .name {
-  color: wheat;
+  color: white;
 }
 
 .intro {
   font-family: 'Abril Fatface', cursive;
-  color: rgb(0, 102, 255);
+  color: rgb(247, 219, 63);
   font-size: 60px;
   position: relative;
   padding-bottom: 100px;
@@ -54,12 +54,12 @@ p {
 .fa-react,
 .fa-node {
   font-size: 40px;
-  color: wheat;
+  color: white;
 }
 
 .fa-react:hover,
 .fa-node:hover {
-  color: rgb(211, 157, 56);
+  color: rgb(247, 219, 63);
   transform: rotate(360deg);
   transition: 0.5s ease;
 }
@@ -78,14 +78,14 @@ p {
 .btn {
   font-family: 'Abril Fatface', cursive;
   text-decoration: none;
-  color: rgb(0, 102, 255);
+  color: rgb(247, 219, 63);
   font-size: 25px;
   margin: 0 10px;
   cursor: pointer;
 }
 
 .btn:hover {
-  color: wheat;
+  color: white;
 }
 
 /***** Reseaux *****/
@@ -102,12 +102,12 @@ p {
 .fa-linkedin-in,
 .fa-facebook-f {
   font-size: 18px;
-  color: rgb(0, 102, 255);
+  color: rgb(247, 219, 63);
 }
 
 .fa-linkedin-in:hover,
 .fa-facebook-f:hover {
-  color: wheat;
+  color: white;
   transform: rotate(360deg);
   transition: 0.5s ease;
 }
@@ -115,12 +115,12 @@ p {
 .fa-github,
 .fa-instagram {
   font-size: 18px;
-  color: wheat;
+  color: white;
 }
 
 .fa-github:hover,
 .fa-instagram:hover {
-  color: rgb(0, 102, 255);
+  color: rgb(247, 219, 63);
   transform: rotate(-360deg);
   transition: 0.5s ease;
 }
@@ -136,7 +136,7 @@ p {
   }
 
   .intro {
-    color: wheat;
+    color: rgb(247, 219, 63);
     font-size: 40px;
     padding-bottom: 60px;
     margin-left: 10px;
@@ -153,7 +153,7 @@ p {
 
   .btn {
     text-decoration: underline 1px;
-    color: wheat;
+    color: rgb(247, 219, 63);
     font-size: 22px;
   }
 
@@ -169,6 +169,5 @@ p {
   .fa-linkedin-in,
   .fa-facebook-f {
     font-size: 18px;
-    color: rgb(0, 102, 255);
   }
 }
