--- a/src/components/navbar/navBar.css
+++ b/src/components/navbar/navBar.css
@@ -6,12 +6,12 @@
 
 .navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 75px;
   width: 100%;
-  background-image: linear-gradient(180deg, #1e1e1c 1%, #000000 100%);
-  border-bottom: solid 1px rgb(0, 102, 255);
+  background-color: #427496;
+  border-bottom: solid 1px rgb(247, 219, 63);
   position: fixed;
   z-index: 1;
 }
@@ -25,10 +25,11 @@
 
 .accueil,
 .portfolio,
-.apropos {
+.apropos,
+.contact {
   font-family: 'Abril Fatface', cursive;
   text-decoration: none;
-  color: rgb(0, 102, 255);
+  color: rgb(247, 219, 63);
   font-size: 20px;
   padding: 10px 20px;
   margin: 0 10px;
@@ -37,14 +38,17 @@
 
 .accueil:hover,
 .portfolio:hover,
-.apropos:hover {
-  color: wheat;
+.apropos:hover,
+.contact:hover {
+  color: #030e4b;
   transform: scale(1) translate(5px);
   transition: 0.5s all ease-in-out;
 }
 
 .logo {
-  color: white;
+  width: 7%;
+  height: auto;
+  padding-top: 10px;
 }
 
 .mobile-menu-icon {
@@ -52,14 +56,8 @@
 }
 
 @media screen and (max-width: 780px) {
-  .logo {
-    display: flex;
-    position: absolute;
-    top: 15px;
-    left: 35px;
-  }
   .navbar {
-    border-bottom: solid 1px rgb(0, 102, 255);
+    border-bottom: solid 1px#030e4b;
   }
 
   .nav-links {
@@ -74,7 +72,7 @@
     top: 75px;
     transition: all 0.5s ease-out;
     width: 100%;
-    background: wheat;
+    background: rgb(247, 219, 63);
     z-index: 1;
   }
 
@@ -82,7 +80,7 @@
   .portfolio,
   .apropos {
     font-family: 'Abril Fatface', cursive;
-    color: black;
+    color: #030e4b;
     text-align: center;
     padding: 32px;
     width: 100%;
@@ -93,11 +91,17 @@
     display: block;
     position: absolute;
     background: none;
-    color: wheat;
+    color: #030e4b;
     font-size: 30px;
     border: none;
     outline: none;
     top: 15px;
     right: 25px;
+  }
+
+  .logo {
+    width: 25%;
+    height: auto;
+    margin-left: 20px;
   }
 }
