--- a/src/components/accueil/accueilPage.css
+++ b/src/components/accueil/accueilPage.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Charlotte;
+  src: url('../../Charlotte.otf');
+}
+
 .grid-intro {
   color: rgb(247, 219, 63);
   display: flex;
@@ -15,6 +20,7 @@
 
 .name {
   color: white;
+  font-family: Charlotte;
 }
 
 .intro {
