--- a/src/components/apropos/apropos.css
+++ b/src/components/apropos/apropos.css
@@ -1,23 +1,112 @@
-.positionPhoto {
-  display: flex;
+@font-face {
+  font-family: Charlotte;
+  src: url('../../Charlotte.otf');
 }
 
-.portrait {
+/* photo + présentation */
+.cards {
+  display: flex;
+  flex-direction: row;
   height: max-content;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.card1 {
+  flex: 40%;
+}
+.portrait {
+  max-width: 100%;
   padding-top: 70px;
 }
+
+.card2 {
+  padding: 10px;
+  flex: 60%;
+  justify-content: center;
+  overflow: auto;
+}
+.debut {
+  margin-top: 130px;
+  margin-right: 30%;
+  margin-left: 30%;
+  color: rgb(247, 219, 63);
+  font-family: Charlotte;
+  font-size: 40px;
+  border-bottom: 1px solid rgb(247, 219, 63);
+}
 .spitch {
+  overflow: auto;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 100%;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+.about {
+  height: 400px;
+  width: 70%;
+  margin-left: 50px;
+  justify-content: center;
+}
+.texte {
+  text-align: start;
+  font-family: 'Abril Fatface', cursive;
+  font-size: 20px;
+  margin-top: 20px;
+  color: rgb(247, 219, 63);
+}
+.bleu {
+  color: #f7f7f7;
 }
 
-.containerAbout {
+/* Loisirs */
+.conteneur {
   display: flex;
-  justify-content: flex-start;
-  height: 300px;
-  width: 80%;
-  background-color: white;
-  border-radius: 3px;
+  justify-content: space-around;
+  height: 200px;
+  margin-top: 10px;
+}
+.element {
+  height: 150px;
+  width: 150px;
+  margin: 10px;
+  background: chartreuse;
+  justify-content: center;
+  align-items: center;
+  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+}
+
+.retaille {
+  max-height: 100%;
+  max-width: 100%;
+}
+/* Responsive layout - makes a one column-layout instead of two-column layout */
+@media (max-width: 800px) {
+  .cards {
+    flex-direction: column;
+  }
+  .debut {
+    margin-top: 50px;
+  }
+  .spitch {
+    display: flex;
+    justify-content: center;
+  }
+  .about {
+    width: 90%;
+    margin-left: 0;
+  }
+  .texte {
+    font-size: 17px;
+  }
+  .conteneur {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 200px;
+    margin-top: 3px;
+  }
 }
