--- a/src/components/apropos/apropos.css
+++ b/src/components/apropos/apropos.css
@@ -3,6 +3,11 @@
   src: url('../../Charlotte.otf');
 }
 
+@font-face {
+  font-family: Sunflower;
+  src: url('../../sunflower.otf');
+}
+
 /* photo + présentation */
 .cards {
   display: flex;
@@ -14,11 +19,14 @@
 }
 
 .card1 {
-  flex: 40%;
+  padding-top: 130px;
 }
 .portrait {
-  max-width: 100%;
-  padding-top: 70px;
+  max-width: 70%;
+  border-radius: 0 40px;
+  -webkit-box-shadow: 9px 6px 19px -2px rgba(8, 30, 61, 1);
+  -moz-box-shadow: 9px 6px 19px -2px rgba(8, 30, 61, 1);
+  box-shadow: 9px 6px 19px -2px rgba(8, 30, 61, 1);
 }
 
 .card2 {
@@ -53,13 +61,13 @@
 }
 .texte {
   text-align: start;
-  font-family: 'Abril Fatface', cursive;
+  font-family: Sunflower;
   font-size: 20px;
   margin-top: 20px;
-  color: rgb(247, 219, 63);
+  color: rgb(168, 255, 255);
 }
 .bleu {
-  color: #f7f7f7;
+  color: rgb(247, 219, 63);
 }
 
 /* Loisirs */
