--- a/src/components/accueil/accueilPage.css
+++ b/src/components/accueil/accueilPage.css
@@ -139,6 +139,12 @@ p {
   transform: rotate(-360deg);
   transition: 0.5s ease;
 }
+.mail {
+  font-family: Sunflower;
+  font-size: 14px;
+  color: rgb(247, 219, 63);
+  padding-top: 40px;
+}
 
 @media screen and (max-width: 1100px) {
   .mer {
